[project]
name = "my-mission-control"
version = "0.1.0"
description = "Alert from satellite log file"
readme = "README.md"
authors = [
    { name = "Lalit Sharma", email = "lalitsharma.email@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "tomli>=2.2.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
my-mission-control = "my_mission_control.entrypoints.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
]
[tool.pytest.ini_options]
addopts = "--capture=no"

[tool.isort]
profile = "black"
line_length = 299
multi_line_output = 3

[tool.ruff]
line-length = 299
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]

[tool.pyright]
include = ["src/", "tests/"]
exclude = ["**/__pycache__", ".venv", ".pytest_cache", ".ruff_cache"]
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = true
venvPath = "."
venv = ".venv"

[tool.bandit]
skips = ["B101"]  # Example: skip assert usage warnings
exclude = ["tests", ".venv"]

[tool.coverage.run]
branch = true
source = ["my_mission_control"]

[tool.coverage.report]
show_missing = true
skip_covered = true
